finaliza Layout Tablet

--- a/Mobile/books/styles/header.css
+++ b/Mobile/books/styles/header.css
@@ -85,4 +85,11 @@
   .cabecalho__menu-hamburger {
     display: none;
   }
+  .opções__botão:checked ~ .lista-menu {
+    display: block;
+    width: auto;
+  }
+  .opções__botão {
+    display: none;
+  }
 }
