--- a/Mobile/books/styles/rodape.css
+++ b/Mobile/books/styles/rodape.css
@@ -5,3 +5,32 @@ hr {
   background-color: var(--branco);
   padding: 1em;
 }
+.lista-rodapé {
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .lista-rodapé {
+    display: block;
+  }
+  .rodapé__titulo {
+    font-size: 24px;
+  }
+  .rodapé {
+    display: flex;
+    justify-content: space-around;
+  }
+  .lista-rodapé__titulo {
+    color: var(--cinza-claro);
+    font-size: 14px;
+  }
+  .lista-rodapé__item {
+    display: flex;
+    align-items: center;
+    margin: 0.6em 0;
+  }
+  .lista-rodapé__link {
+    color: var(--cinza);
+    text-decoration: none;
+    margin-left: 0.6em;
+  }
+}
