--- a/Mobile/books/styles/banner.css
+++ b/Mobile/books/styles/banner.css
@@ -41,3 +41,14 @@
     background-position: 7em;
   }
 }
+@media screen and (min-width: 1728px) {
+  .banner__pesquisa {
+    width: 30%;
+  }
+  .banner__pesquisa::placeholder {
+    background-position: 12em;
+  }
+  .banner {
+    padding: 6em 0;
+  }
+}
