--- a/Mobile/books/styles/header.css
+++ b/Mobile/books/styles/header.css
@@ -6,6 +6,12 @@
   background-position: center;
   display: inline-block;
 }
+.container__botao:checked ~ .container__rotulo > .cabecalho__menu-hamburger {
+  background-image: url("../assets/Menu\ Aberto.svg");
+}
+.container__botao:checked ~ .container__rotulo {
+  background: var(--azul-degrade);
+}
 .cabecalho {
   background-color: var(--branco);
   display: flex;
@@ -54,6 +60,9 @@
 .opções {
   display: none;
 }
+.container__texto {
+  display: none;
+}
 @media screen and (min-width: 1024px) {
   .container__titulo,
   .container__titulo--negrito {
@@ -91,5 +100,37 @@
   }
   .opções__botão {
     display: none;
+  }
+  .opções__botão:checked ~ .opções__rotulo > .opções__item {
+    background: var(--azul-degrade);
+    color: var(--branco);
+  }
+  .opções__item {
+    padding: 2em 1em;
+  }
+  .lista-menu__item:hover {
+    background: var(--azul-degrade);
+  }
+  .lista-menu__item:hover > .lista-menu__link {
+    -webkit-text-fill-color: var(--branco);
+    text-decoration: none;
+  }
+}
+
+@media screen and (min-width: 1728px) {
+  .container__texto {
+    display: block;
+  }
+  .container__link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--preto);
+  }
+  .cabecalho {
+    padding: 0 2em;
+  }
+  .opções {
+    margin-right: auto;
   }
 }
